# Robocubes

./: CMakeLists.txt  README.md  main.cxx
cmake/: configure_boost.cmake  configure_cucumber.cmake  configure_entityx.cmake  configure_gmock.cmake  configure_gtest.cmake  configure_opencv.cmake  configure_qt5.cmake  configure_sdl2.cmake  configure_tbb.cmake
cmake/modules/: FindEntityX.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/boxesGame/: AdjacentNeighbourCountResult.hxx  AdjacentNeighbourCounter.hxx  BoxPosition.hxx  BoxStacker.hxx  Game.hxx  HorizontalAndVerticalNeigbourCounter.hxx  HorizontalAndVerticalNeighbourCountResult.hxx  PoppedPositions.hxx  Stack.hxx  StackPopper.hxx  StackSet.hxx  VerticalNeigbourCountResult.hxx  VerticalNeighbourCounter.hxx
src/: AdjacentNeighbourCountResult.cxx  AdjacentNeighbourCountResult.hxx  AdjacentNeighbourCounter.cxx  AdjacentNeighbourCounter.hxx  AdjacentPopper.cxx  AdjacentPopperResult.cxx  AdjacentPopperResult.hxx  AnimationSet.cxx  AnimationSet.hxx  AnimationStep.cxx  AnimationStep.hxx  AnimationSubSystem.cxx  AnimationSubSystem.hxx  AnyClickTracker.cxx  BackgroundBoxesMaker.cxx  BackgroundBoxesMaker.hxx  BackgroundRenderer.cxx  BackgroundRenderer.hxx  BackgroundRendererEntityFactory.cxx  BackgroundRendererEntityFactory.hxx  BackgroundRendererSubSystem.cxx  BackgroundRendererSubSystem.hxx  Box.cxx  Box.hxx  BoxDrawer.cxx  BoxDrawer.hxx  BoxDrawingConfiguration.cxx  BoxDrawingConfiguration.hxx  BoxExistanceChecker.cxx  BoxExistanceChecker.hxx  BoxPosition.cxx  BoxPosition.hxx  BoxPositionCalculator.cxx  BoxPositionCalculator.hxx  BoxRendererSubSystem.cxx  BoxRendererSubSystem.hxx  BoxStacker.cxx  BoxStacker.hxx  CharToColorConverter.cxx  CharToColorConverter.hxx  (+160 more)
src/components/: AnimationSet.cxx  AnimationSet.hxx  AnimationStep.cxx  BackgroundComponent.cxx  BackgroundComponent.hxx  BoxPosition.cxx  Dimension.hxx  DrawPosition.hxx  MouseClicked.cxx  MouseClicked.hxx  Music.cxx  Offset.cxx  Sound.cxx  Sound.hxx  TTFText.cxx  TerrainComponent.hxx  Velocity.cxx  Velocity.hxx  WillPop.cxx
src/decorators/: AnyClickTracker.hxx  LoopTerminator.cxx  MouseClickTracker.cxx  MouseClickTracker.hxx
src/delegates/: BackgroundBoxesMaker.cxx  BackgroundBoxesMaker.hxx  BackgroundRendererEntityFactory.cxx  BackgroundRendererEntityFactory.hxx  BoxExistanceChecker.hxx  CharToColorConverter.cxx  CharToColorConverter.hxx  GameCleaner.cxx  GameCleaner.hxx  LogoMaker.cxx  LogoMaker.hxx  MovementChecker.cxx  MusicPlayer.cxx  PNGSurfaceGetter.cxx  PNGSurfaceGetter.hxx  PlainBackgroundMaker.cxx  PlainBackgroundMaker.hxx  SingleDataHolder.cxx  SingleDataHolder.hxx  SoundPlayer.cxx  SoundPlayer.hxx  SquaredDistanceModeler.cxx  SquaredDistanceModeler.hxx  TileExistsChecker.cxx  TileExistsChecker.hxx  WindowRefGetter.cxx  WindowRefGetter.hxx
src/logic/: AdjacentNeighbourCountResult.cxx  AdjacentNeighbourCountResult.hxx  AdjacentNeighbourCounter.cxx  AdjacentNeighbourCounter.hxx  AdjacentPopper.cxx  AdjacentPopper.hxx  AdjacentPopperResult.cxx  AdjacentPopperResult.hxx  Box.cxx  Box.hxx  BoxStacker.hxx  Colors.hxx  HorizontalMovement.cxx  HorizontalMover.cxx  HorizontalMover.hxx  HorizontalStackInserter.cxx  HorizontalStackInserter.hxx  HorizontalStackInserterResult.cxx  HorizontalStackInserterResult.hxx  NeighboursInVicinityCounter.cxx  PoppedPositions.cxx  PoppedPositions.hxx  Stack.cxx  Stack.hxx  StackDivider.cxx  StackDivider.hxx  StackFactory.cxx  StackFactory.hxx  StackPopResult.cxx  StackSet.cxx  StackSet.hxx  StackSetFactory.cxx  StackSetInserter.hxx  Vector2D.cxx  VerticalMovement.hxx  VerticalMovements.cxx  VerticalMovements.hxx  VerticalMover.hxx  VerticalNeigbourCountResult.hxx
src/systems/: AnimationSubSystem.cxx  BackgroundRendererSubSystem.cxx  BackgroundRendererSubSystem.hxx  BoxRendererSubSystem.cxx  EndGameSystem.cxx  EndGameSystem.hxx  FontRenderingSubSystem.cxx  GameSystem.hxx  GuiRenderer.cxx  GuiRenderer.hxx  RenderingSubSystem.hxx  RenderingSystem.cxx  RenderingSystem.hxx  SoundSystem.cxx  SoundSystem.hxx  StackInsertionSystem.cxx  StackInsertionSystem.hxx  TerrainRendererSubSystem.cxx  TerrainRendererSubSystem.hxx  TileHorizontalMover.cxx  TileHorizontalMover.hxx  TilePopperSystem.cxx  TilePopperSystem.hxx  TileVerticalMover.cxx  TileVerticalMover.hxx  VelocitySystem.cxx  VelocitySystem.hxx  ZoomOutAnimationSystem.cxx  ZoomOutAnimationSystem.hxx
src/view/: BoxDrawer.cxx  BoxDrawer.hxx  BoxDrawingConfiguration.cxx  BoxDrawingConfiguration.hxx  BoxPositionCalculator.cxx  BoxPositionCalculator.hxx  DrawCanvas.cxx  GameOverMaker.cxx  GameOverMaker.hxx  GraphicsHolder.cxx  IMGInitializer.hxx  PNG.cxx  PNG.hxx  PNGDimensionGetter.cxx  PNGDimensionGetter.hxx  PNGDrawer.cxx  PNGDrawer.hxx  PNGFactory.cxx  PNGFactory.hxx  PNGLoader.hxx  RectBuilder.cxx  RectBuilder.hxx  Renderable.cxx  Renderable.hxx  ResourceUtil.cxx  ResourceUtil.hxx  SmokeAdder.cxx  SmokeAdder.hxx  StackSetEntityMaker.cxx  StackSetEntityMaker.hxx  StartButtonMaker.cxx  StartButtonMaker.hxx  TTFRenderer.hxx  TerrainRenderer.cxx  TerrainRenderer.hxx  Window.cxx  Window.hxx  WindowCleaner.cxx  WindowCleaner.hxx  (+7 more)
tests/: AdjacentNeighbourCountingTests.cxx  AdjacentPopperTests.cxx  AnimationSet.cxx  AnimationSet.hxx  AnimationStep.cxx  AnimationStep.hxx  AnimationSubSystem.cxx  AnimationSubSystem.hxx  AutomaticStackInsertionTests.cxx  BoxDisapperanceTest.cxx  BoxPopperTestHelpers.hxx  BoxTests.cxx  CMakeLists.txt  DisapperanceAnimationTests.cxx  EndGameTests.cxx  EntityFactory.cxx  FallDownTests.cxx  GameOverMakerTests.cxx  GameSceneTests.cxx  GameSystem.hxx  GuiTests.cxx  HorizontalAndVerticalNeighbourCountingTests.cxx  HorizontalMoveInstructionTests.cxx  HorizontalMovement.cxx  HorizontalMovement.hxx  HorizontalMovements.cxx  HorizontalMovements.hxx  HorizontalMover.cxx  HorizontalMover.hxx  HorizontalStackInsertionTests.cxx  MainMenuTests.cxx  MergeBackTests.cxx  MouseEventTests.cxx  NeighbourCountingTests.cxx  Offset.cxx  Offset.hxx  RenderingSystem.cxx  RenderingSystem.hxx  SDLInitializationTests.cxx  SoundTests.cxx  (+11 more)
