cmake_minimum_required(VERSION 3.1)
macro(ADD_NEW_TEST TEST_SOURCE TEST_DEPENDENCIES FOLDER_NAME)
	set (TARGET_NAME ${TEST_SOURCE}_TESTTARGET)
	add_executable(${TARGET_NAME} ${TEST_SOURCE}.cxx)
	target_link_libraries(${TARGET_NAME} ${${TEST_DEPENDENCIES}})
	add_test(NAME ${TEST_SOURCE} COMMAND ${TARGET_NAME})
	set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER ${FOLDER_NAME})
endmacro()

set(BOXES_GAME_TEST_DEPENDENCIES boxesGame ${GTEST_BOTH_LIBRARIES} ${GMOCK_BOTH_LIBRARIES})

set(MATERIALS_FOLDER ${CMAKE_CURRENT_BINARY_DIR}/boxesGame_tests_materials/)

# file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/materials/ DESTINATION ${MATERIALS_FOLDER})

add_definitions(-DMATERIALS_FOLDER="${MATERIALS_FOLDER}")

#add tests like this:
# ADD_NEW_TEST(boxesGame_add_test   BOXES_GAME_TEST_DEPENDENCIES "boxesGame_tests")

set(TEST_NAMES BoxTests )

FOREACH(TEST_NAME ${TEST_NAMES})
	ADD_NEW_TEST(${TEST_NAME} BOXES_GAME_TEST_DEPENDENCIES "boxesGame_tests")
ENDFOREACH()
